--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   supabase_flutter: ^2.10.3
   flutter_dotenv: ^6.0.0
+  flutter_riverpod: ^3.0.3
+  go_router: ^14.2.1
 
 dev_dependencies:
   flutter_test:
