--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   go_router: ^14.2.1
   riverpod_annotation: ^3.0.3
   riverpod_generator: ^3.0.3
+  freezed_annotation: ^3.1.0
+  json_annotation: ^4.9.0
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +55,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   build_runner: ^2.7.1
+  freezed: ^3.2.3
+  json_serializable: ^6.11.2
+  riverpod_lint: 3.0.3
+  custom_lint: ^0.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
